--- a/pages/Calendar/styles.css
+++ b/pages/Calendar/styles.css
@@ -1,14 +1,79 @@
 
 body {
-    margin: 0;
+    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding: 0;
-    height: 100%;
+    background: #f5f5f5;
+    color: #4d4d4d;
+    min-width: 230px;
+    max-width: 550px;
+    margin: 0 auto;
+    font-smoothing: antialiased;
+    font-weight: 300;
 }
 
 .root {
-    display: flex;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    font-size: 20px;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+    padding: 20px 0 10px 0;
+    width: 100%;
+}
+
+h1 {
+    flex: 1;
+    margin: 0;
+    padding: 0;
+    font-size: 60px;
+    font-weight: 100;
+    text-align: center;
+    color: #c58dc1;
+    text-rendering: optimizeLegibility;
+    display: flex;
     flex-direction: column;
+    line-height: initial;
+}
+
+h1 span:last-child {
+    font-size: 36px;
+    font-weight: 400;
+}
+
+.container {
+    background: #fff;
+    margin: 20px 0;
+    position: relative;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 25px 50px 0 rgba(0,0,0,0.1);
+}
+
+.container:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    overflow: hidden;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0,0,0,0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0,0,0,0.2);
+    pointer-events: none;
+}
+
+.button {
+    margin: 0;
+    padding: 6px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+
+.button svg {
+    fill: #d8b9d6;
 }
